fix: tech images overflow

--- a/apps/angular-examples/src/app/feature/lazy/info/technology/technology.component.scss
+++ b/apps/angular-examples/src/app/feature/lazy/info/technology/technology.component.scss
@@ -13,7 +13,7 @@
     padding-bottom: 1.5rem;
 
     .tech-image {
-      object-fit: contain;
+      object-fit: scale-down;
     }
   }
 }
